# libsql-py

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml  build-windows-wheel.yml
src/: lib.rs
tests/: test_suite.py
